--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,9 +7,15 @@
     <string name="following">Following</string>
     <string name="username">Username</string>
     <string name="password">Password</string>
-    <string name="login">Login</string>
+    <string name="sign_in">Sign In</string>
     <string name="old_habits_die_hard">Old Habits Die Hard</string>
     <string name="account_created">Account Created!</string>
     <string name="habits">Habits</string>
     <string name="habit_events">Habit Events</string>
+    <string name="create_profile">Create Profile</string>
+    <string name="enter_username">Enter Username</string>
+    <string name="back_to_sign_in"><u>Back to Sign In</u></string>
+    <string name="followers">Followers</string>
+    <string name="my_habits">My Habits</string>
+    <string name="my_habit_events">My Habit Events</string>
 </resources>
